<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkActivity"
    android:paddingTop="20dp">

    <LinearLayout
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:fontFamily="sans-serif-medium"
            android:layout_marginStart="5dp"
            android:text="@string/credentials_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white_credentials"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:background="@color/darkItem"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <TextView
                android:fontFamily="sans-serif-medium"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:textColor="@color/white_credentials_title"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:text="@string/clientID_title"/>
            <com.maximeg.nfc4tuya.views.BetterEditText
                android:fontFamily="sans-serif-medium"
                android:id="@+id/client_edit_text"
                android:background="@android:color/transparent"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"
                android:textSize="16sp"
                android:textColor="@color/white_credentials"
                android:layout_gravity="center_vertical"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darkItemDivider"/>

        <LinearLayout
            android:background="@color/darkItem"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <TextView
                android:fontFamily="sans-serif-medium"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:textColor="@color/white_credentials_title"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:text="@string/secret_title"/>
            <com.maximeg.nfc4tuya.views.BetterEditText
                android:fontFamily="sans-serif-medium"
                android:id="@+id/secret_edit_text"
                android:background="@android:color/transparent"
                android:paddingStart="5dp"
                android:textSize="16sp"
                android:textColor="@color/white_credentials"
                android:paddingEnd="10dp"
                android:layout_gravity="center_vertical"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darkItemDivider"/>

        <LinearLayout
            android:background="@color/darkItem"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <TextView
                android:fontFamily="sans-serif-medium"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:textColor="@color/white_credentials_title"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:text="@string/deviceID_title"/>
            <com.maximeg.nfc4tuya.views.BetterEditText
                android:fontFamily="sans-serif-medium"
                android:id="@+id/device_edit_text"
                android:background="@android:color/transparent"
                android:paddingStart="5dp"
                android:textSize="16sp"
                android:textColor="@color/white_credentials"
                android:paddingEnd="10dp"
                android:layout_gravity="center_vertical"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <TextView
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="20dp"
            android:layout_marginStart="5dp"
            android:text="@string/calculated_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white_credentials"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:background="@color/darkItem"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <TextView
                android:fontFamily="sans-serif-medium"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:textColor="@color/white_credentials_title"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:text="@string/uid_title"/>
            <TextView
                android:textIsSelectable="true"
                android:fontFamily="sans-serif-medium"
                android:id="@+id/uuid_text_view"
                android:paddingStart="5dp"
                android:textSize="16sp"
                android:paddingEnd="10dp"
                android:textColor="@color/white_credentials"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darkItemDivider"/>

        <LinearLayout
            android:background="@color/darkItem"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <TextView
                android:fontFamily="sans-serif-medium"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:textColor="@color/white_credentials_title"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:text="@string/homeID_title"/>
            <TextView
                android:textIsSelectable="true"
                android:fontFamily="sans-serif-medium"
                android:id="@+id/homeid_text_view"
                android:paddingStart="5dp"
                android:textSize="16sp"
                android:paddingEnd="10dp"
                android:textColor="@color/white_credentials"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <Button
            android:id="@+id/ids_button"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="@drawable/button_orange"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/calculate_title"/>
    </LinearLayout>
</ScrollView>